--- a/www/package.json
+++ b/www/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": "true",
   "scripts": {
+    "init": "wasm-pack build ../wasm --out-name index",
     "start": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +13,7 @@
   "author": "Yusuke Mitsui",
   "license": "MIT",
   "dependencies": {
-    "wasm": "file:./src/wasm/pkg"
+    "wasm": "file:../wasm/pkg"
   },
   "devDependencies": {
     "@types/lodash": "~4.14.168",
